// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should hide the movie ticket pop  1`] = `null`;

exports[`should highlight date when it is selected  1`] = `
Array [
  <div
    style={
        Object {
            "left": "0px",
            "position": "absolute",
            "top": "0px",
          }
    }
/>,
  <div
    className="popup-overlay"
    onClick={[Function]}
    style={
        Object {
            "background": "rgba(0, 0, 0,0.5)",
            "bottom": "0",
            "display": "flex",
            "left": "0",
            "position": "fixed",
            "right": "0",
            "top": "0",
            "zIndex": "999",
          }
    }
>
    <div
        className="popup-content "
        onClick={[Function]}
        style={
            Object {
                "background": "rgb(255, 255, 255)",
                "border": "1px solid rgb(187, 187, 187)",
                "margin": "auto",
                "padding": "5px",
                "position": "relative",
                "width": "50%",
              }
        }
    >
        <div>
            <div
                className="book-ticket-wrapper"
            >
                <div
                    className="booking-dates-wrapper"
                >
                    <div
                        className="booking-date-item booking-date-label"
                    >
                        Date :
                    </div>
                    <div
                        className="booking-date-item date-selected"
                        onClick={[Function]}
                    >
                        <div>
                            Wed
                        </div>
                        <div>
                            20
                        </div>
                    </div>
                    <div
                        className="booking-date-item"
                        onClick={[Function]}
                    >
                        <div>
                            Thu
                        </div>
                        <div>
                            21
                        </div>
                    </div>
                    <div
                        className="booking-date-item"
                        onClick={[Function]}
                    >
                        <div>
                            Fri
                        </div>
                        <div>
                            22
                        </div>
                    </div>
                    <div
                        className="booking-date-item"
                        onClick={[Function]}
                    >
                        <div>
                            Sat
                        </div>
                        <div>
                            23
                        </div>
                    </div>
                    <div
                        className="booking-date-item"
                        onClick={[Function]}
                    >
                        <div>
                            Sun
                        </div>
                        <div>
                            24
                        </div>
                    </div>
                    <div
                        className="booking-date-item"
                        onClick={[Function]}
                    >
                        <div>
                            Mon
                        </div>
                        <div>
                            25
                        </div>
                    </div>
                    <div
                        className="booking-date-item"
                        onClick={[Function]}
                    >
                        <div>
                            Tue
                        </div>
                        <div>
                            26
                        </div>
                    </div>
                </div>
            </div>
        </div>
    </div>
</div>,
]
`;

exports[`should show the movie ticket pop  1`] = `
Array [
  <div
    style={
        Object {
            "left": "0px",
            "position": "absolute",
            "top": "0px",
          }
    }
/>,
  <div
    className="popup-overlay"
    onClick={[Function]}
    style={
        Object {
            "background": "rgba(0, 0, 0,0.5)",
            "bottom": "0",
            "display": "flex",
            "left": "0",
            "position": "fixed",
            "right": "0",
            "top": "0",
            "zIndex": "999",
          }
    }
>
    <div
        className="popup-content "
        onClick={[Function]}
        style={
            Object {
                "background": "rgb(255, 255, 255)",
                "border": "1px solid rgb(187, 187, 187)",
                "margin": "auto",
                "padding": "5px",
                "position": "relative",
                "width": "50%",
              }
        }
    >
        <div>
            <div
                className="book-ticket-wrapper"
            >
                <div
                    className="booking-dates-wrapper"
                >
                    <div
                        className="booking-date-item booking-date-label"
                    >
                        Date :
                    </div>
                    <div
                        className="booking-date-item"
                        onClick={[Function]}
                    >
                        <div>
                            Wed
                        </div>
                        <div>
                            20
                        </div>
                    </div>
                    <div
                        className="booking-date-item"
                        onClick={[Function]}
                    >
                        <div>
                            Thu
                        </div>
                        <div>
                            21
                        </div>
                    </div>
                    <div
                        className="booking-date-item"
                        onClick={[Function]}
                    >
                        <div>
                            Fri
                        </div>
                        <div>
                            22
                        </div>
                    </div>
                    <div
                        className="booking-date-item"
                        onClick={[Function]}
                    >
                        <div>
                            Sat
                        </div>
                        <div>
                            23
                        </div>
                    </div>
                    <div
                        className="booking-date-item"
                        onClick={[Function]}
                    >
                        <div>
                            Sun
                        </div>
                        <div>
                            24
                        </div>
                    </div>
                    <div
                        className="booking-date-item"
                        onClick={[Function]}
                    >
                        <div>
                            Mon
                        </div>
                        <div>
                            25
                        </div>
                    </div>
                    <div
                        className="booking-date-item"
                        onClick={[Function]}
                    >
                        <div>
                            Tue
                        </div>
                        <div>
                            26
                        </div>
                    </div>
                </div>
            </div>
        </div>
    </div>
</div>,
]
`;
